# language-pretraining

./: .gitignore  .pre-commit-config.yaml  CITATION.cff  LICENSE.md  README.md  create_datasets.py  extract_electra_model.py  parameter.json  pyproject.toml  requirements.txt  run_pretraining.py  train_tokenizer.py
models/: __init__.py  deberta.py  debertav2.py  debertav3.py  electra.py
tests/: test_create_datasets.py  test_run_pretraining.py  test_train_tokenizer.py
tests/data/: botchan_ja.txt
utils/: __init__.py  data_collator.py  language_modeling.py  logger.py  model.py  tokenizer.py  torch_version.py  trainer.py  trainer_pt_utils.py  training_args.py
