[tool.poetry]
name = "language-pretraining"
version = "v2.1.0"
description = "Pre-training Language Models for Japanese"
authors = ["Masahiro Suzuki <b2019msuzuki@socsim.org>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
datasets = "^1.10.0"
fugashi = "^1.1.0"
tensorflow = "^2.5.0"
tqdm = "^4.63.0"
transformers = "4.20.1"
tokenizers = "^0.11"
torch = "^1.9.1"
ipadic = "^1.0.0"
unidic-lite = "1.0.8"
jptranstokenizer = "^0.1.2"
sentencepiece = "^0.1.96"
ja-gsdluw = {url = "https://github.com/megagonlabs/UD_Japanese-GSD/releases/download/r2.9-NE/ja_gsdluw-3.2.0-py3-none-any.whl"}
deepspeed = "^0.7.3"
mpi4py = "^3.1.3"
unidic = "^1.1.0"
spacy = "^3.2.0"
psutil = "^5.9.3"


[tool.poetry.group.dev.dependencies]
black = "^22.6.0"
isort = "^5.10.1"
mypy = "^0.971"
pytest = "^7.1.2"
spacy = "^3.2.0"
SudachiTra = "^0.1.7"


[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu113"
default = false
secondary = false

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
