[tool.poetry]
name = "language-pretraining"
version = "v2.2.0"
description = "Pre-training Language Models for Japanese"
authors = ["Masahiro Suzuki <msuzuki9609@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
datasets = "^1.10.0"
fugashi = "^1.1.0"
tensorflow = "^2.5.0"
tqdm = "^4.63.0"
transformers = "4.20.1"
tokenizers = "^0.11"
torch = {url = "https://download.pytorch.org/whl/cu113/torch-1.10.2%2Bcu113-cp39-cp39-linux_x86_64.whl"}
jptranstokenizer = "^0.3.1"
sentencepiece = "^0.1.96"
psutil = "^5.9.3"


[tool.poetry.group.dev.dependencies]
black = "^22.6.0"
isort = "^5.10.1"
mypy = "^0.971"
pytest = "^7.1.2"
spacy = "^3.2.0"
unidic = "^1.1.0"
ipadic = "^1.0.0"
unidic-lite = "1.0.8"
ja-gsdluw = {url = "https://github.com/megagonlabs/UD_Japanese-GSD/releases/download/r2.9-NE/ja_gsdluw-3.2.0-py3-none-any.whl"}
SudachiTra = "^0.1.7"
deepspeed = "^0.7.3"
mpi4py = "^3.1.3"
pre-commit = "^2.21.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
